--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
             <div style="height:20px;"></div>
             <div style="width: 10%;float: left;min-height: 1px;"></div>
             <div class="mdui-card mdui-shadow-10" style="width:39%;float: left;">
-                <h4 style="width:80%;margin:auto;font-weight: 300;font-style: italic;" id="names"></h4>
                 <div class="mdui-textfield" style="width:80%;margin:auto">
                     <h3>用户名</h3>
                     <input class="mdui-textfield-input" type="text" placeholder="UserName" id="UserName"/>
@@ -70,6 +69,7 @@
             <div style="width: 2%;float: left;min-height: 1px;"></div>
             <div class="mdui-card mdui-shadow-10 mdui-ripple" style="margin: auto;width: 39%;float: left;">
                 <div style="margin: auto;width: 80%;">
+                    <h4 style="width:80%;margin:auto;font-weight: 300;" id="names"></h4>
                     <p style="font-weight: 400;">登陆状态</p>
                     <button class="mdui-btn mdui-ripple mdui-color-theme" onclick="window.pywebview.api.status();">刷新状态</button>
                     <p id="status" style="font-weight: 400;" class="mdui-text-truncate"></p>
@@ -107,6 +107,7 @@
                 <div class="mdui-textfield" style="width:80%;margin:auto">
                     <h3>关于</h3>
                     <p>作者@pete 请合理使用本应用 开源在 https://github.com/peterpei1186861238/Srun3k-Boxies 下</p>
+                    <p>build : 2.0</p>
                 </div>
             </div>
         </div>
